Issue: #FT-2607 Component: Changes: 1. align the elements in MFA login modal in Tripfinder

--- a/TripfinderWeb/TripfinderWeb/Global/Css/login.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/login.less
@@ -191,6 +191,8 @@
 
 		.form-group {
 			width: 100%;
+			padding-left: 0;
+			padding-right: 0;
 		}
 
 		input {
